# eviscerator

./: CMakeLists.txt  Cargo.toml  TestResults.h  build.rs  main.cpp  readme.md  version.sh
.circleci/: config.yml
.github/: FUNDING.yml
modules/: IPC.cpp  IPC.h  PlannerQualities.cpp  PlannerQualities.h  TestSuite.cpp  TestSuite.h  existential.cpp  existential.h  pddl12.cpp  pddl12.h  pddl21.cpp  pddl21.h  pddl22.cpp  pddl22.h  pddl3.cpp  pddl3.h  pddlplus.cpp  pddlplus.h
pddl/existential/: domain.pddl  problem.pddl
pddl/other/: domain-prime-factors.pddl  problem-prime-factors.pddl
pddl/pddl12/: domain-conditional-effects-td.pddl  domain-conditional-effects.pddl  domain-disjunctive-preconditions-td.pddl  domain-disjunctive-preconditions.pddl  domain-domain-axioms-td.pddl  domain-domain-axioms.pddl  domain-equality-td.pddl  domain-equality.pddl  domain-existential-preconditions-td.pddl  domain-existential-preconditions.pddl  domain-expression-evaluation-td.pddl  domain-expression-evaluation.pddl  domain-open-world-td.pddl  domain-open-world.pddl  domain-safety-constraints-td.pddl  domain-safety-constraints.pddl  domain-strips.pddl  domain-subgoals--through-axioms-td.pddl  domain-subgoals-through-axioms.pddl  domain-typing.pddl  domain-universal-preconditions-td.pddl  domain-universal-preconditions.pddl  problem-conditional-effects-td.pddl  problem-conditional-effects.pddl  problem-disjunctive-precondition.pddl  problem-disjunctive-preconditions-td.pddl  problem-equality-td.pddl  problem-equality.pddl  problem-existential-preconditions-td.pddl  problem-existential-preconditions.pddl  problem-open-world-td.pddl  problem-open-world.pddl  problem-strips.pddl  problem-typing.pddl  problem-universal-preconditions-td.pddl  problem-universal-preconditions.pddl
src/: core.rs  execution.rs  main.rs  pddl12.rs  pddl21.rs  pddl22.rs  pddl3.rs  pddl31.rs  pddlplus.rs  plan.rs
utilities/: Ellipsis.cpp  Ellipsis.h  Executor.cpp  Executor.h  functions.cpp
(+66 files in other folders)
